crates/pgls_pretty_print/tests/snapshots/multi/tests__date_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/date.sql
snapshot_kind: text
---
CREATE TABLE date_tbl (f1 DATE);

INSERT INTO date_tbl VALUES ('1957-04-09');

INSERT INTO date_tbl VALUES ('1957-06-13');

INSERT INTO date_tbl VALUES ('1996-02-28');

INSERT INTO date_tbl VALUES ('1996-02-29');

INSERT INTO date_tbl VALUES ('1996-03-01');

INSERT INTO date_tbl VALUES ('1996-03-02');

INSERT INTO date_tbl VALUES ('1997-02-28');

INSERT INTO date_tbl VALUES ('1997-02-29');

INSERT INTO date_tbl VALUES ('1997-03-01');

INSERT INTO date_tbl VALUES ('1997-03-02');

INSERT INTO date_tbl VALUES ('2000-04-01');

INSERT INTO date_tbl VALUES ('2000-04-02');

INSERT INTO date_tbl VALUES ('2000-04-03');

INSERT INTO date_tbl VALUES ('2038-04-08');

INSERT INTO date_tbl VALUES ('2039-04-09');

INSERT INTO date_tbl VALUES ('2040-04-10');

INSERT INTO date_tbl VALUES ('2040-04-10 BC');

SELECT f1 FROM date_tbl;

SELECT f1 FROM date_tbl WHERE f1 < '2000-01-01';

SELECT f1 FROM date_tbl WHERE f1 BETWEEN '2000-01-01' AND '2001-01-01';

SET datestyle = iso;

SET datestyle = ymd;

SELECT CAST('January 8, 1999' AS DATE);

SELECT CAST('1999-01-08' AS DATE);

SELECT CAST('1999-01-18' AS DATE);

SELECT CAST('1/8/1999' AS DATE);

SELECT CAST('1/18/1999' AS DATE);

SELECT CAST('18/1/1999' AS DATE);

SELECT CAST('01/02/03' AS DATE);

SELECT CAST('19990108' AS DATE);

SELECT CAST('990108' AS DATE);

SELECT CAST('1999.008' AS DATE);

SELECT CAST('J2451187' AS DATE);

SELECT CAST('January 8, 99 BC' AS DATE);

SELECT CAST('99-Jan-08' AS DATE);

SELECT CAST('1999-Jan-08' AS DATE);

SELECT CAST('08-Jan-99' AS DATE);

SELECT CAST('08-Jan-1999' AS DATE);

SELECT CAST('Jan-08-99' AS DATE);

SELECT CAST('Jan-08-1999' AS DATE);

SELECT CAST('99-08-Jan' AS DATE);

SELECT CAST('1999-08-Jan' AS DATE);

SELECT CAST('99 Jan 08' AS DATE);

SELECT CAST('1999 Jan 08' AS DATE);

SELECT CAST('08 Jan 99' AS DATE);

SELECT CAST('08 Jan 1999' AS DATE);

SELECT CAST('Jan 08 99' AS DATE);

SELECT CAST('Jan 08 1999' AS DATE);

SELECT CAST('99 08 Jan' AS DATE);

SELECT CAST('1999 08 Jan' AS DATE);

SELECT CAST('99-01-08' AS DATE);

SELECT CAST('1999-01-08' AS DATE);

SELECT CAST('08-01-99' AS DATE);

SELECT CAST('08-01-1999' AS DATE);

SELECT CAST('01-08-99' AS DATE);

SELECT CAST('01-08-1999' AS DATE);

SELECT CAST('99-08-01' AS DATE);

SELECT CAST('1999-08-01' AS DATE);

SELECT CAST('99 01 08' AS DATE);

SELECT CAST('1999 01 08' AS DATE);

SELECT CAST('08 01 99' AS DATE);

SELECT CAST('08 01 1999' AS DATE);

SELECT CAST('01 08 99' AS DATE);

SELECT CAST('01 08 1999' AS DATE);

SELECT CAST('99 08 01' AS DATE);

SELECT CAST('1999 08 01' AS DATE);

SET datestyle = dmy;

SELECT CAST('January 8, 1999' AS DATE);

SELECT CAST('1999-01-08' AS DATE);

SELECT CAST('1999-01-18' AS DATE);

SELECT CAST('1/8/1999' AS DATE);

SELECT CAST('1/18/1999' AS DATE);

SELECT CAST('18/1/1999' AS DATE);

SELECT CAST('01/02/03' AS DATE);

SELECT CAST('19990108' AS DATE);

SELECT CAST('990108' AS DATE);

SELECT CAST('1999.008' AS DATE);

SELECT CAST('J2451187' AS DATE);

SELECT CAST('January 8, 99 BC' AS DATE);

SELECT CAST('99-Jan-08' AS DATE);

SELECT CAST('1999-Jan-08' AS DATE);

SELECT CAST('08-Jan-99' AS DATE);

SELECT CAST('08-Jan-1999' AS DATE);

SELECT CAST('Jan-08-99' AS DATE);

SELECT CAST('Jan-08-1999' AS DATE);

SELECT CAST('99-08-Jan' AS DATE);

SELECT CAST('1999-08-Jan' AS DATE);

SELECT CAST('99 Jan 08' AS DATE);

SELECT CAST('1999 Jan 08' AS DATE);

SELECT CAST('08 Jan 99' AS DATE);

SELECT CAST('08 Jan 1999' AS DATE);

SELECT CAST('Jan 08 99' AS DATE);

SELECT CAST('Jan 08 1999' AS DATE);

SELECT CAST('99 08 Jan' AS DATE);

SELECT CAST('1999 08 Jan' AS DATE);

SELECT CAST('99-01-08' AS DATE);

SELECT CAST('1999-01-08' AS DATE);

SELECT CAST('08-01-99' AS DATE);

SELECT CAST('08-01-1999' AS DATE);

SELECT CAST('01-08-99' AS DATE);

SELECT CAST('01-08-1999' AS DATE);

SELECT CAST('99-08-01' AS DATE);

SELECT CAST('1999-08-01' AS DATE);

SELECT CAST('99 01 08' AS DATE);

SELECT CAST('1999 01 08' AS DATE);

SELECT CAST('08 01 99' AS DATE);

SELECT CAST('08 01 1999' AS DATE);

SELECT CAST('01 08 99' AS DATE);

SELECT CAST('01 08 1999' AS DATE);

SELECT CAST('99 08 01' AS DATE);

SELECT CAST('1999 08 01' AS DATE);

SET datestyle = mdy;

SELECT CAST('January 8, 1999' AS DATE);

SELECT CAST('1999-01-08' AS DATE);

SELECT CAST('1999-01-18' AS DATE);

SELECT CAST('1/8/1999' AS DATE);

SELECT CAST('1/18/1999' AS DATE);

SELECT CAST('18/1/1999' AS DATE);

SELECT CAST('01/02/03' AS DATE);

SELECT CAST('19990108' AS DATE);

SELECT CAST('990108' AS DATE);

SELECT CAST('1999.008' AS DATE);

SELECT CAST('J2451187' AS DATE);

SELECT CAST('January 8, 99 BC' AS DATE);

SELECT CAST('99-Jan-08' AS DATE);

SELECT CAST('1999-Jan-08' AS DATE);

SELECT CAST('08-Jan-99' AS DATE);

SELECT CAST('08-Jan-1999' AS DATE);

SELECT CAST('Jan-08-99' AS DATE);

SELECT CAST('Jan-08-1999' AS DATE);

SELECT CAST('99-08-Jan' AS DATE);

SELECT CAST('1999-08-Jan' AS DATE);

SELECT CAST('99 Jan 08' AS DATE);

SELECT CAST('1999 Jan 08' AS DATE);

SELECT CAST('08 Jan 99' AS DATE);

SELECT CAST('08 Jan 1999' AS DATE);

SELECT CAST('Jan 08 99' AS DATE);

SELECT CAST('Jan 08 1999' AS DATE);

SELECT CAST('99 08 Jan' AS DATE);

SELECT CAST('1999 08 Jan' AS DATE);

SELECT CAST('99-01-08' AS DATE);

SELECT CAST('1999-01-08' AS DATE);

SELECT CAST('08-01-99' AS DATE);

SELECT CAST('08-01-1999' AS DATE);

SELECT CAST('01-08-99' AS DATE);

SELECT CAST('01-08-1999' AS DATE);

SELECT CAST('99-08-01' AS DATE);

SELECT CAST('1999-08-01' AS DATE);

SELECT CAST('99 01 08' AS DATE);

SELECT CAST('1999 01 08' AS DATE);

SELECT CAST('08 01 99' AS DATE);

SELECT CAST('08 01 1999' AS DATE);

SELECT CAST('01 08 99' AS DATE);

SELECT CAST('01 08 1999' AS DATE);

SELECT CAST('99 08 01' AS DATE);

SELECT CAST('1999 08 01' AS DATE);

SELECT CAST('4714-11-24 BC' AS DATE);

SELECT CAST('4714-11-23 BC' AS DATE);

SELECT CAST('5874897-12-31' AS DATE);

SELECT CAST('5874898-01-01' AS DATE);

SELECT pg_input_is_valid('now', 'date');

SELECT pg_input_is_valid('garbage', 'date');

SELECT pg_input_is_valid('6874898-01-01', 'date');

SELECT * FROM pg_input_error_info('garbage', 'date');

SELECT * FROM pg_input_error_info('6874898-01-01', 'date');

RESET datestyle;

SELECT f1 - CAST('2000-01-01' AS DATE) AS "Days From 2K" FROM date_tbl;

SELECT f1 - CAST('epoch' AS DATE) AS "Days From Epoch" FROM date_tbl;

SELECT CAST('yesterday' AS DATE) - CAST('today' AS DATE) AS "One day";

SELECT CAST('today' AS DATE) - CAST('tomorrow' AS DATE) AS "One day";

SELECT CAST('yesterday' AS DATE) - CAST('tomorrow' AS DATE) AS "Two days";

SELECT CAST('tomorrow' AS DATE) - CAST('today' AS DATE) AS "One day";

SELECT CAST('today' AS DATE) - CAST('yesterday' AS DATE) AS "One day";

SELECT CAST('tomorrow' AS DATE) - CAST('yesterday' AS DATE) AS "Two days";

SELECT
  f1 AS date,
  date_part('year', f1) AS year,
  date_part('month', f1) AS month,
  date_part('day', f1) AS day,
  date_part('quarter', f1) AS quarter,
  date_part('decade', f1) AS decade,
  date_part('century', f1) AS century,
  date_part('millennium', f1)
  AS millennium,
  date_part('isoyear', f1) AS isoyear,
  date_part('week', f1) AS week,
  date_part('dow', f1) AS dow,
  date_part('isodow', f1) AS isodow,
  date_part('doy', f1) AS doy,
  date_part('julian', f1) AS julian,
  date_part('epoch', f1) AS epoch
FROM
  date_tbl;

SELECT EXTRACT('epoch' FROM CAST('1970-01-01' AS DATE));

SELECT EXTRACT('century' FROM CAST('0101-12-31 BC' AS DATE));

SELECT EXTRACT('century' FROM CAST('0100-12-31 BC' AS DATE));

SELECT EXTRACT('century' FROM CAST('0001-12-31 BC' AS DATE));

SELECT EXTRACT('century' FROM CAST('0001-01-01' AS DATE));

SELECT EXTRACT('century' FROM CAST('0001-01-01 AD' AS DATE));

SELECT EXTRACT('century' FROM CAST('1900-12-31' AS DATE));

SELECT EXTRACT('century' FROM CAST('1901-01-01' AS DATE));

SELECT EXTRACT('century' FROM CAST('2000-12-31' AS DATE));

SELECT EXTRACT('century' FROM CAST('2001-01-01' AS DATE));

SELECT EXTRACT('century' FROM CURRENT_DATE) >= 21 AS "true";

SELECT EXTRACT('millennium' FROM CAST('0001-12-31 BC' AS DATE));

SELECT EXTRACT('millennium' FROM CAST('0001-01-01 AD' AS DATE));

SELECT EXTRACT('millennium' FROM CAST('1000-12-31' AS DATE));

SELECT EXTRACT('millennium' FROM CAST('1001-01-01' AS DATE));

SELECT EXTRACT('millennium' FROM CAST('2000-12-31' AS DATE));

SELECT EXTRACT('millennium' FROM CAST('2001-01-01' AS DATE));

SELECT EXTRACT('millennium' FROM CURRENT_DATE);

SELECT EXTRACT('decade' FROM CAST('1994-12-25' AS DATE));

SELECT EXTRACT('decade' FROM CAST('0010-01-01' AS DATE));

SELECT EXTRACT('decade' FROM CAST('0009-12-31' AS DATE));

SELECT EXTRACT('decade' FROM CAST('0001-01-01 BC' AS DATE));

SELECT EXTRACT('decade' FROM CAST('0002-12-31 BC' AS DATE));

SELECT EXTRACT('decade' FROM CAST('0011-01-01 BC' AS DATE));

SELECT EXTRACT('decade' FROM CAST('0012-12-31 BC' AS DATE));

SELECT EXTRACT('microseconds' FROM CAST('2020-08-11' AS DATE));

SELECT EXTRACT('milliseconds' FROM CAST('2020-08-11' AS DATE));

SELECT EXTRACT('second' FROM CAST('2020-08-11' AS DATE));

SELECT EXTRACT('minute' FROM CAST('2020-08-11' AS DATE));

SELECT EXTRACT('hour' FROM CAST('2020-08-11' AS DATE));

SELECT EXTRACT('day' FROM CAST('2020-08-11' AS DATE));

SELECT EXTRACT('month' FROM CAST('2020-08-11' AS DATE));

SELECT EXTRACT('year' FROM CAST('2020-08-11' AS DATE));

SELECT EXTRACT('year' FROM CAST('2020-08-11 BC' AS DATE));

SELECT EXTRACT('decade' FROM CAST('2020-08-11' AS DATE));

SELECT EXTRACT('century' FROM CAST('2020-08-11' AS DATE));

SELECT EXTRACT('millennium' FROM CAST('2020-08-11' AS DATE));

SELECT EXTRACT('isoyear' FROM CAST('2020-08-11' AS DATE));

SELECT EXTRACT('isoyear' FROM CAST('2020-08-11 BC' AS DATE));

SELECT EXTRACT('quarter' FROM CAST('2020-08-11' AS DATE));

SELECT EXTRACT('week' FROM CAST('2020-08-11' AS DATE));

SELECT EXTRACT('dow' FROM CAST('2020-08-11' AS DATE));

SELECT EXTRACT('dow' FROM CAST('2020-08-16' AS DATE));

SELECT EXTRACT('isodow' FROM CAST('2020-08-11' AS DATE));

SELECT EXTRACT('isodow' FROM CAST('2020-08-16' AS DATE));

SELECT EXTRACT('doy' FROM CAST('2020-08-11' AS DATE));

SELECT EXTRACT('timezone' FROM CAST('2020-08-11' AS DATE));

SELECT EXTRACT('timezone_m' FROM CAST('2020-08-11' AS DATE));

SELECT EXTRACT('timezone_h' FROM CAST('2020-08-11' AS DATE));

SELECT EXTRACT('epoch' FROM CAST('2020-08-11' AS DATE));

SELECT EXTRACT('julian' FROM CAST('2020-08-11' AS DATE));

SELECT date_trunc('MILLENNIUM', CAST('1970-03-20 04:30:00.00000' AS TIMESTAMP));

SELECT date_trunc('MILLENNIUM', CAST('1970-03-20' AS DATE));

SELECT date_trunc('CENTURY', CAST('1970-03-20 04:30:00.00000' AS TIMESTAMP));

SELECT date_trunc('CENTURY', CAST('1970-03-20' AS DATE));

SELECT date_trunc('CENTURY', CAST('2004-08-10' AS DATE));

SELECT date_trunc('CENTURY', CAST('0002-02-04' AS DATE));

SELECT date_trunc('CENTURY', CAST('0055-08-10 BC' AS DATE));

SELECT date_trunc('DECADE', CAST('1993-12-25' AS DATE));

SELECT date_trunc('DECADE', CAST('0004-12-25' AS DATE));

SELECT date_trunc('DECADE', CAST('0002-12-31 BC' AS DATE));

SELECT CAST('infinity' AS DATE), CAST('-infinity' AS DATE);

SELECT CAST('infinity' AS DATE) > CAST('today' AS DATE) AS t;

SELECT CAST('-infinity' AS DATE) < CAST('today' AS DATE) AS t;

SELECT
  isfinite(CAST('infinity' AS DATE)),
  isfinite(CAST('-infinity' AS DATE)),
  isfinite(CAST('today' AS DATE));

SELECT CAST('infinity' AS DATE) = CAST('+infinity' AS DATE) AS t;

SELECT EXTRACT('day' FROM CAST('infinity' AS DATE));

SELECT EXTRACT('day' FROM CAST('-infinity' AS DATE));

SELECT EXTRACT('day' FROM CAST('infinity' AS DATE));

SELECT EXTRACT('month' FROM CAST('infinity' AS DATE));

SELECT EXTRACT('quarter' FROM CAST('infinity' AS DATE));

SELECT EXTRACT('week' FROM CAST('infinity' AS DATE));

SELECT EXTRACT('dow' FROM CAST('infinity' AS DATE));

SELECT EXTRACT('isodow' FROM CAST('infinity' AS DATE));

SELECT EXTRACT('doy' FROM CAST('infinity' AS DATE));

SELECT EXTRACT('epoch' FROM CAST('infinity' AS DATE));

SELECT EXTRACT('epoch' FROM CAST('-infinity' AS DATE));

SELECT EXTRACT('year' FROM CAST('infinity' AS DATE));

SELECT EXTRACT('decade' FROM CAST('infinity' AS DATE));

SELECT EXTRACT('century' FROM CAST('infinity' AS DATE));

SELECT EXTRACT('millennium' FROM CAST('infinity' AS DATE));

SELECT EXTRACT('julian' FROM CAST('infinity' AS DATE));

SELECT EXTRACT('isoyear' FROM CAST('infinity' AS DATE));

SELECT EXTRACT('epoch' FROM CAST('infinity' AS DATE));

SELECT EXTRACT('microsec' FROM CAST('infinity' AS DATE));

SELECT make_date(2013, 7, 15);

SELECT make_date(-44, 3, 15);

SELECT make_time(8, 20, 0.0);

SELECT make_date(0, 7, 15);

SELECT make_date(2013, 2, 30);

SELECT make_date(2013, 13, 1);

SELECT make_date(2013, 11, -1);

SELECT make_date(-2147483648, 1, 1);

SELECT make_time(10, 55, 100.1);

SELECT make_time(24, 0, 2.1);
